# rag-vector-hybrid-graph

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: eval_dashboard.py  streamlit_app.py
docs/: DEPLOY-HF.md
eval/: __init__.py  answer_eval.py  baselines.json  beir_eval.py  benchmark.py  check_regression.py  golden_corpus.json  perf_bench.py  plot_benchmark.py  plot_categories.py  plot_perf.py  plot_retrieval.py  questions.json  rerank_eval.py  retrieval_eval.py  serving_bench.py  sweep_entity_norm.py
eval/reference/: answer_1b.json  answer_3b.json  beir_hotpotqa.json  beir_nfcorpus.json  beir_scifact.json  beir_scifact_bge.json  perf_scifact.json  rerank_hotpotqa.json  rerank_nfcorpus.json  rerank_scifact.json
infra/: DEPLOY.md  README.md  docker-compose.ray.yml  docker-compose.yml  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf
infra/prometheus/: prometheus.ray.yml  prometheus.yml
infra/ray/: Dockerfile  README.md  entrypoint.sh  serve_app.py
notebooks/: 01_chunking.ipynb  02_stack1_traditional.ipynb  03_stack2_hybrid.ipynb  04_stack3_graphrag.ipynb  vllm_serving_colab.ipynb
src/: pipeline.py
src/shared/: __init__.py  answer_metrics.py  chunker.py  embeddings.py  evaluator.py  ir_metrics.py  llm.py  prompts.py  rag.py  reranker.py  (+1 more)
tests/: conftest.py  test_answer_metrics.py  test_check_regression.py  test_chunker.py  test_reranked_retriever.py  test_reranker.py  test_stacks.py
(+17 files in other folders)
