[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-comparison"
version = "0.1.0"
description = "Comparative study of RAG architectures: vector, hybrid (BM25+RRF) and graph"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=2.0",
    "faiss-cpu>=1.7",
    "datasets>=2.0",
    "rank-bm25>=0.2",
    "networkx>=3.0",
    "ollama>=0.3",
    "streamlit>=1.34",
    "numpy>=1.24",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
eval = ["ragas>=0.1"]                       # benchmark RAGAS
notebooks = ["jupyter>=1.0", "matplotlib>=3.5"]  # série / exploration
dev = ["pytest>=8.0", "ruff>=0.8"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["pipeline"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
